# das_biotools

./: .gitignore  LICENSE.lst  README.md  Showcases.ipynb  bio_files_processor.py  custom_random_forest.py  das_biotools.py  fastq_filter.py  pyproject.toml  test_das_biotools.py
data/: example_gbk.fasta  example_gbk.gbk
src/: das_dna_rna_tools.py  das_fastq_filter.py  das_protein_tools.py  protein_dict.py
